--- a/static/style.css
+++ b/static/style.css
@@ -1,20 +1,6 @@
 body {
   margin: 0;
-  background: repeating-linear-gradient(
-      -45deg,
-      #202c42,
-      #202c42 0.5pt,
-      transparent 0,
-      transparent 40pt
-    ),
-    repeating-linear-gradient(
-      -45deg,
-      #202c42,
-      #202c42 0.5pt,
-      transparent 0,
-      transparent 26pt
-    ),
-    #192233;
+  background: #192233;
   font-size: calc(12px + 0.35vw);
 }
 
@@ -116,7 +102,7 @@ body {
 }
 
 .content {
-  padding: 40px 20px;
+  padding: 0px 10px;
 }
 
 .banner-features {
@@ -766,4 +752,8 @@ textarea {
   border: none;
   border-radius: 3px;
   color: white;
+}
+
+.tests {
+  background-color: white;
 }
